--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gomoku",
-  "homepage": "https://vainehertz.github.io/gomoku",
+  "homepage": "https://theconnect5.com",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
