--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gomoku",
-  "homepage": "www.theconnect5.com",
+  "homepage": "https://www.theconnect5.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
